# ZubrDSP

./: .$Pipeline.drawio.bkp  .$split.drawio.bkp  Cargo.toml  Pipeline.drawio  log_enable.sh  readme.md  silly.py  test.ipynb  todo
drawio/: .$frontend.drawio.bkp
prototypes/: audio_playback.rs  mod.rs
src/: lib.rs  main.rs
src/ByteLine/: mod.rs
src/ByteLine/codings/: mod.rs  opts.rs
src/DSP/: mod.rs
src/DSP/filtering/: filter.rs  mod.rs
src/DSP/modulation/: mod.rs
src/Pipeline/: buffer.rs  mod.rs  orchestration.rs  pipeline.rs  todo.md
src/Pipeline/manager/: mod.rs  orchestration.rs  pipeline_adapters.rs
src/Pipeline/node/: buffer.rs  format_adapter.rs  messages.rs  mod.rs  prototype.rs  type_adapter.rs
src/Pipeline/pipeline/: mod.rs  node_enum.rs  pipeline.rs  pipeline_thread.rs  welder.rs
src/ddp/: mod.rs
src/dsp/: casting.rs  mod.rs
src/dsp/classification/: mod.rs
src/dsp/convolution/: discrete_convolution.rs  discrete_convolution_test.rs  mod.rs  overlap_save_convolution.rs
src/dsp/core/: mod.rs  pointwise_arithmetic.rs  power.rs
src/dsp/fft/: bit_reversal.rs  (+5 more)
src/foo/: another.rs  mod.rs
src/frontend/: mod.rs
src/general/: mod.rs  parallel_computation.rs  tap.rs  validation_functions.rs
src/pipeline/: api.rs  errors.rs  mod.rs  node_enum.rs  pipeline.rs  pipeline_comms.rs  pipeline_results.rs  pipeline_step.rs  pipeline_taps.rs  pipeline_thread.rs  pipeline_thread_orchestrator.rs  pipeline_traits.rs  prototype.rs  tests.rs  thread_state_space.rs  todo.md  valid_types.rs
src/tests/: audio_file_playback.rs  audio_lpf.rs  mod.rs
(+148 files in other folders)
