[package]
name = "ZubrDSP"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "playback_prototyping"
path = "prototypes/audio_playback.rs"

[dependencies]
async-std = "1.13.0"
futures = "0.3.31"
num = "0.4.3"
plotters = "0.3.3"
rand = "0.9.1"
crossbeam = "0.8"
rayon = "1.8"
atomic_enum = "0.3.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
strum = "0.26.3"
rusb = "0.9.4"
rustfft = "6"
symphonia = "0.5.4"
awedio = "0.5.0"
rodio = "0.21.1"
crossbeam-queue = "0.3.12"
env_logger = "0.11.8"
log = "0.4.27"
num_enum = "0.7.4"
thread-priority = "2.1.0"
